--- a/QuantumWorldPrototype2/MainWindow.xaml
+++ b/QuantumWorldPrototype2/MainWindow.xaml
@@ -4,9 +4,33 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QuantumWorldPrototype2"
+        xmlns:viewmodels="clr-namespace:QuantumWorldPrototype2.ViewModels"
+        xmlns:views="clr-namespace:QuantumWorldPrototype2.Views"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.Resources>
+        <DataTemplate x:Name="buildingsViewTemplate" DataType="{x:Type viewmodels:BuildingsViewModel}">
+            <views:BuildingsView DataContext="{Binding}"/>
+        </DataTemplate>
+        <DataTemplate x:Name="overviewViewTemplate" DataType="{x:Type viewmodels:OverviewViewModel}">
+            <views:OverviewView DataContext="{Binding}"/>
+        </DataTemplate>
+    </Window.Resources>
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="4*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="3*"/>
+        </Grid.ColumnDefinitions>
+        <Label x:Name="CarbonFiberLabel" Grid.Column="1" Content="Carbon Fiber: 0" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center"/>
+        <StackPanel x:Name="MenuStackPanel" Grid.Row="1" Margin="10,10,10,10">
+            <Button x:Name="OverviewButton" Content="Overview" Margin="0,0,0,10" Click="Overview_Clicked"/>
+            <Button x:Name="BuildingsButton" Content="Buildings" Margin="0,0,0,10" Click="Buildings_Clicked"/>
+        </StackPanel>
 
+        <ContentControl Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="1" Grid.RowSpan="1" Content="{Binding}"/>
     </Grid>
 </Window>
