--- a/QuantumWorldPrototype2/Views/BuildingsView.xaml
+++ b/QuantumWorldPrototype2/Views/BuildingsView.xaml
@@ -7,6 +7,19 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="blue">
-            
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <StackPanel x:Name="CarbonFiberBuildingStackPanel" Margin="10,10,10,10" Orientation="Horizontal">
+            <Label x:Name="CarbonFiberBuildingCostLabel" Content="Cost: " VerticalAlignment="Top" Margin="10,10,10,10"/>
+            <Label x:Name="CarbonFiberBuildingCostValueLabel" Content="100" VerticalAlignment="Top" Margin="10,10,10,10"/>
+            <Button x:Name="CarbonFiberBuildingUpgradeButton" Content="Upgrade" VerticalAlignment="Top" Margin="10,10,10,10" Click="CarbonFiberBuildingUpgradeButton_Click"/>
+        </StackPanel>
+
     </Grid>
 </UserControl>
