--- a/QuantumWorldPrototype2/MainWindow.xaml
+++ b/QuantumWorldPrototype2/MainWindow.xaml
@@ -33,7 +33,7 @@
         <ContentControl Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="1" Grid.RowSpan="1" Content="{Binding}"/>
         <StackPanel x:Name="ResourcesValuesStackPanel" Grid.Column="1" Margin="10,10,10,10" VerticalAlignment="Center" Orientation="Horizontal" HorizontalAlignment="Left">
             <Label x:Name="CarbonFiberNameLabel" Content="CarbonFiber: " HorizontalAlignment="Left" Margin="10,0,10,0"/>
-            <Label x:Name="CarbonFiberValueLabel" Content="500"/>
+            <Label x:Name="CarbonFiberValueLabel" Content="{Binding CarbonFiberValue}"/>
         </StackPanel>
     </Grid>
 </Window>
